# godl-program

./: .gitignore  .gitmodules  Agnt ai  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust-toolchain.toml
.github/workflows/: main.yml
api/: Cargo.toml  idl.json
api/src/: consts.rs  error.rs  event.rs  instruction.rs  lib.rs  sdk.rs
api/src/state/: automation.rs  automation_v2.rs  board.rs  config.rs  miner.rs  mod.rs  pool_member.rs  pool_round.rs  referrer.rs  round.rs  sol_motherlode.rs  stake.rs  stake_v2.rs  treasury.rs
cli/: Cargo.toml
cli/src/: display.rs  main.rs  rpc.rs  transaction.rs
cli/src/commands/: admin.rs  automation.rs  deploy.rs  explore.rs  info.rs  lookup_table.rs  mining.rs  mod.rs  referral.rs  swap.rs
program/: Cargo.toml
program/src/: initialize.rs  lib.rs
program/src/admin/: bury.rs  bury_tokens.rs  initialize_sol_motherlode.rs  inject_unrefined_rewards.rs  mod.rs  new_var.rs  pre_bury.rs  set_admin.rs  set_fee_collector.rs  set_godl_per_round.rs  set_motherlode_denominator.rs  set_swap_program.rs  set_var_address.rs  withdraw_vault.rs
program/src/automation/: automate_v2.rs  automate_v3.rs  claim_sol_and_fund_automation.rs  fund_automation.rs  mod.rs
program/src/miner/: checkpoint.rs  checkpoint_v3.rs  claim_godl.rs  claim_sol.rs  close.rs  close_v2.rs  deploy_v2.rs  deploy_v3.rs  inject_godl_motherlode.rs  log.rs  mod.rs  reset_v2.rs  reset_v3.rs
program/src/referral/: claim_referral.rs  initialize_referrer.rs  mod.rs  set_referrer.rs
program/src/stake/: claim_yield.rs  deposit.rs  mod.rs  withdraw.rs
program/src/stake_v2/: claim_yield_v2.rs  compound_yield_v2.rs  deposit_v2.rs  mod.rs  set_executor_v2.rs  stake_nft.rs  unstake_nft.rs  withdraw_v2.rs
