[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
bincode = "1.3.3"
bytemuck.workspace = true
chrono = "0.4"
clap = { version = "4.5.4", features = ["derive", "env"] }
dotenvy.workspace = true
entropy-api.workspace = true
entropy-types.workspace = true
hex = "0.4"
jup-swap = { path = "../vendor/jupiter-swap-api-client", package = "jupiter-swap-api-client" }
godl-api = { path = "../api" }
reqwest = { version = "0.11.24", default-features = false, features = ["json"] }
serde_json = "1.0.140"
solana-account-decoder.workspace = true
solana-address-lookup-table-interface.workspace = true
solana-client.workspace = true
solana-program.workspace = true
solana-sdk.workspace = true
spl-associated-token-account.workspace = true
spl-token.workspace = true
steel.workspace = true
tokio.workspace = true

