[package]
name = "godl-program"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "godl"

[features]
default = []

[dependencies]
bincode.workspace = true
entropy-api.workspace = true
mpl-core.workspace = true
godl-api.workspace = true
rmp.workspace = true
rmp-serde.workspace = true
solana-nostd-keccak.workspace = true
solana-program.workspace = true
spl-token.workspace = true
spl-token-2022.workspace = true
spl-token-metadata-interface.workspace = true
spl-associated-token-account.workspace = true
steel.workspace = true

[dev-dependencies]
rand = "0.8.5"
